--- a/src/Assets/scss/components/_c-works.scss
+++ b/src/Assets/scss/components/_c-works.scss
@@ -190,6 +190,8 @@
           background-color: transparent;
           transition: all 0.15s ease-out;
           text-decoration: none;
+          margin-top: 10px;
+          display: inline-block;
 
           &:hover {
             text-decoration: none;
